# kaiwa

./: .gitattributes  Cargo.toml  README.md  docker-compose.yml
api/: .env  Cargo.toml  Rocket.toml
api/migrations/2019-02-21-035904_create_sites/: up.sql
api/migrations/2019-03-18-042220_create_pages/: up.sql
api/migrations/2019-03-18-042807_create_threads/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/controllers/: mod.rs  pages.rs  sites.rs  threads.rs  users.rs
api/src/models/: mod.rs  page.rs  site.rs  thread.rs  user.rs
web/: package.json
