[package]
name = "api"
version = "0.2.0"
edition = "2018"

[dependencies]
rocket = "0.4"
diesel = { version = "1.4.1", features = ["postgres", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "*", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
